styles.css
/* ... */
@keyframes bounce {
  0% {
    animation-timing-function: ease-in;
    opacity: 1;
    transform: translateY(-45px);
  }
  24% {
    opacity: 1;
  }
  40% {
    animation-timing-function: ease-in;
    transform: translateY(-24px);
  }
  65% {
    animation-timing-function: ease-in;
    transform: translateY(-12px);
  }
  82% {
    animation-timing-function: ease-in;
    transform: translateY(-6px);
  }
  93% {
    animation-timing-function: ease-in;
    transform: translateY(-4px);
  }
  25%, 55%, 75%, 87% {
    animation-timing-function: ease-out;
    transform: translateY(0px);
  }
  100% {
    animation-timing-function: ease-out;
    opacity: 1;
    transform: translateY(0px);
  }
}
@keyframes rainbowBorder {
  50% {
    box-shadow: 5px 5px 15px 5px #FF8080, -9px 5px 15px 5px #FFE488, -7px -5px 15px 5px #8CFF85, 12px -5px 15px 5px #80C7FF, 12px 10px 15px 7px #E488FF, -10px 10px 15px 7px #FF616B, -10px -7px 27px 1px #8E5CFF, 1px 1px 0px 0px rgba(0, 0, 0, 0);
  }
  100% {
    box-shadow: none;
  }
}
@keyframes spinningDisc {
  25% {
    transform: rotate(90deg);
  }
  50% {
    transform: rotate(180deg);
  }
  75% {
    transform: rotate(270deg);
  }
  100% {
    transform: rotate(360deg);
  }
}
* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
  color: white;
}

a {
  text-decoration: none;
}

html {
  overflow-y: scroll;
}

main {
  overflow-x: hidden;
}

.rest-of-page {
  background: linear-gradient(#647AAF, #092659);
  max-width: 100%;
  background-repeat: no-repeat;
  background-size: cover;
}

.fixed_elements__socials {
  position: fixed;
  bottom: 0;
  left: 50px;
  display: flex;
  flex-direction: column;
  align-items: center;
  z-index: 2;
}
.fixed_elements__socials__line {
  width: 5px;
  height: 20vh;
  background: white;
  margin-top: 10px;
}
.fixed_elements__socials__links {
  font-size: 50px;
  margin-top: 10px;
}

.fixed_elements__logo-img {
  background: linear-gradient(#0B4284, #0B4284) padding-box, linear-gradient(#1178c3, #afb2b5) border-box;
  border: 10px solid transparent;
  padding-top: 15px;
  padding-bottom: 20px;
  margin-left: 10px;
  margin-top: 10px;
  border-radius: 50%;
  overflow: hidden;
  position: fixed;
  z-index: 20;
}

.fixed_elements__hamburger-menu {
  visibility: hidden;
  margin: 0px;
  padding: 0px;
  position: fixed;
  font-size: 50px;
  left: 10px;
  top: 10px;
  z-index: 50;
}

.nav {
  display: flex;
  justify-content: flex-end;
  align-items: center;
  font-family: "Consolas";
  position: fixed;
  width: 100%;
  z-index: 50;
}
.nav__list-master {
  display: flex;
  justify-content: flex-end;
  column-gap: 10px;
  align-self: flex-start;
}
.nav__list-items {
  font-size: 30px;
  list-style-type: none;
  margin-right: 20px;
  font-weight: normal;
}
.nav__list-items-number {
  color: #64FFDA;
}

#particles-js-landing {
  position: absolute;
  width: 100%;
  height: 100vh;
}

.landing {
  max-width: 100%;
  width: 100%;
  height: 100vh;
  display: flex;
  flex-direction: column;
  justify-content: space-around;
  align-items: center;
  background-image: url(./assets/images/background-space-pic.jfif);
  background-repeat: no-repeat;
  background-size: cover;
}
.landing__message {
  z-index: 2;
  background: linear-gradient(rgba(120, 149, 198, 0.15), rgba(14, 21, 48, 0.15));
  height: auto;
  width: 70vw;
  border: 1px solid rgba(103, 128, 159, 0.15);
  font-size: 50px;
  margin-top: 150px;
  border-radius: 25px;
  font-family: "Consolas";
  display: grid;
  grid-template-columns: auto auto;
  grid-template-rows: auto auto auto auto;
  column-gap: 0;
  row-gap: 0;
  box-shadow: 10px 10px 5px 0px rgba(0, 0, 0, 0.75);
  padding-top: 20px;
  animation-name: rainbowBorder;
  animation-duration: 8s;
  animation-timing-function: linear;
  animation-iteration-count: infinite;
  animation-delay: 4s;
}
.landing__message__line-1 {
  grid-column-start: 1;
}
.landing__message__line-2 {
  grid-column-start: 2;
  grid-row-start: 2;
  color: #29b6f6;
}
.landing__message__line-3 {
  grid-column-start: 2;
  grid-row-start: 3;
  color: #9CCC65;
}
.landing__message__line-4 {
  grid-column-start: 2;
  grid-row-start: 4;
  color: #EF5350;
}
.landing__message__line-5 {
  grid-column-start: 1;
  grid-row-start: 5;
}
.landing__message__line-6 {
  grid-column-start: 1;
  grid-row-start: 6;
}
.landing__message__line__span1 {
  color: #29b6f6;
  display: inline-block;
}
.landing__message__line__span2 {
  animation-name: fade-out;
  animation-duration: 1.5s;
  animation-iteration-count: infinite;
  animation-timing-function: linear;
}
.landing__chevron {
  font-size: 120px;
  justify-self: flex-end;
  align-self: center;
  z-index: 2;
}

#particles-js-about {
  position: absolute;
  width: 100%;
}

.about {
  min-height: 100vh;
  max-width: 100%;
  position: relative;
  display: flex;
  flex-direction: column;
  justify-content: space-evenly;
  align-items: center;
  font-family: "Red Hat Display";
}
.about__article {
  display: flex;
  justify-content: space-between;
  align-items: flex-start;
  width: 70vw;
  height: 40vh;
}
.about__article__text {
  display: flex;
  flex-direction: column;
  justify-content: space-between;
  height: 100%;
}
.about__article__header {
  font-size: 50px;
}
.about__article__profile-pic {
  box-shadow: 10px 10px 5px 0px rgba(0, 0, 0, 0.75);
  background: linear-gradient(#0B4284, #0B4284) padding-box, linear-gradient(#1178c3, #afb2b5) border-box;
  border: 5px solid transparent;
  border-radius: 15px;
  overflow: hidden;
  height: 100%;
}
.about__article__info {
  font-size: 24px;
  height: 100%;
  padding-top: 20px;
  padding-bottom: 20px;
  padding-right: 20px;
}
.about__article__info__highlight {
  color: #64ffda;
  font-weight: bold;
}
.about__tech-stack {
  display: flex;
  flex-direction: column;
  justify-content: space-between;
  align-items: center;
  width: 70vw;
  padding: 10px;
}
.about__tech-stack__header {
  font-size: 40px;
  margin-bottom: 20px;
  border-bottom: 2px solid white;
  border-radius: 10px;
}
/* ... */

